--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>Minecraft Texture Generator</h1>
+            <h1>BLOCK Texture Generator v0.1</h1>
         </div>
         
         <div class="main-content">
