--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
             </div>
             
             <div id="canvas-container">
-                <div class="texture-preview-container">
+               <div class="texture-preview-container">
                     <h4>Texture Preview</h4>
                     <canvas id="texture-preview" width="128" height="128"></canvas>
                     <div class="action-buttons">
-                        <button id="export-texture">Export Texture</button>
+                        <button id="export-texture">Export</button>
                     </div>
                 </div>
             </div>
