--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
         <p class="export-info">VXB format can be used in other voxel applications.</p>
     </div>
 </div>
-       <script type="module" src="vxb-converter.js"></script> 
-    <script type="module" src="script.js"></script>
-    <script src="script.js"></script>
-    <script>
+
+<script src="vxb-converter.js"></script>
+<script src="vxb-converter-setup.js"></script>
+<script src="script.js"></script>
+
         // Add section collapsing functionality
         document.addEventListener('DOMContentLoaded', function() {
             const sections = document.querySelectorAll('.panel-section:not(.primary-actions)');
