--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Magic Block</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Include Three.js and SimplexNoise libraries -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
+    <!-- Include Three.js, OrbitControls and SimplexNoise libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
 
-<!-- Include VXB converter and app scripts -->
-<script src="vxb-converter.js"></script>
-<script src="script.js"></script>
+    <!-- Include VXB converter and app scripts -->
+    <script src="vxb-converter.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="loading-screen">
