--- a/index.html
+++ b/index.html
@@ -157,6 +157,47 @@
                 </div>
                 
                 <div class="panel-section">
+                    <h3>Custom Face Textures</h3>
+                    <div class="panel-content">
+                        <div class="face-textures-grid">
+                            <div class="face-texture-item">
+                                <label>Front:</label>
+                                <canvas class="face-preview" data-face="front" width="64" height="64"></canvas>
+                                <input type="file" class="face-input" data-face="front" accept="image/*">
+                            </div>
+                            <div class="face-texture-item">
+                                <label>Back:</label>
+                                <canvas class="face-preview" data-face="back" width="64" height="64"></canvas>
+                                <input type="file" class="face-input" data-face="back" accept="image/*">
+                            </div>
+                            <div class="face-texture-item">
+                                <label>Top:</label>
+                                <canvas class="face-preview" data-face="top" width="64" height="64"></canvas>
+                                <input type="file" class="face-input" data-face="top" accept="image/*">
+                            </div>
+                            <div class="face-texture-item">
+                                <label>Bottom:</label>
+                                <canvas class="face-preview" data-face="bottom" width="64" height="64"></canvas>
+                                <input type="file" class="face-input" data-face="bottom" accept="image/*">
+                            </div>
+                            <div class="face-texture-item">
+                                <label>Left:</label>
+                                <canvas class="face-preview" data-face="left" width="64" height="64"></canvas>
+                                <input type="file" class="face-input" data-face="left" accept="image/*">
+                            </div>
+                            <div class="face-texture-item">
+                                <label>Right:</label>
+                                <canvas class="face-preview" data-face="right" width="64" height="64"></canvas>
+                                <input type="file" class="face-input" data-face="right" accept="image/*">
+                            </div>
+                        </div>
+                        <div class="action-buttons">
+                            <button id="clear-custom-textures">Clear Custom Textures</button>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="panel-section">
                     <h3>Other Options</h3>
                     <div class="panel-content">
                         <div class="action-buttons">
