Add face preview functionality with expand/collapse feature and styling updates

--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
                 <div class="texture-preview-container">
                     <h4>Texture Preview</h4>
                     <canvas id="texture-preview" width="128" height="128"></canvas>
+                    <div class="preview-faces">
+                        <div class="face-card" data-face="front">
+                            <canvas width="128" height="128"></canvas>
+                            <span>Front</span>
+                        </div>
+                        <div class="face-card" data-face="back">
+                            <canvas width="128" height="128"></canvas>
+                            <span>Back</span>
+                        </div>
+                        <div class="face-card" data-face="top">
+                            <canvas width="128" height="128"></canvas>
+                            <span>Top</span>
+                        </div>
+                        <div class="face-card" data-face="bottom">
+                            <canvas width="128" height="128"></canvas>
+                            <span>Bottom</span>
+                        </div>
+                        <div class="face-card" data-face="left">
+                            <canvas width="128" height="128"></canvas>
+                            <span>Left</span>
+                        </div>
+                        <div class="face-card" data-face="right">
+                            <canvas width="128" height="128"></canvas>
+                            <span>Right</span>
+                        </div>
+                    </div>
                     <div class="action-buttons">
                         <button id="export-texture">Export</button>
                     </div>
