--- a/index.html
+++ b/index.html
@@ -313,5 +313,9 @@
 <script src="vxb-converter-setup.js"></script>
 <script src="script.js"></script>
 
+<!-- Pattern system scripts -->
+<script src="pattern-database.js"></script>
+<script src="pattern-layer-system.js"></script>
+
 </body>
 </html>
